# cve_collector

./: .cursorignore  .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: cve_collector.md  cve_collector2.md  github_구조.md  osv_구조.md
docs/examples/: README.md
docs/examples/github/: README.md  graphql-batch-request.json  graphql-batch-response.json  rest-single-advisory.json
docs/examples/osv/: README.md  batch-query-api-response.json  package-vulnerabilities-api-response.json  single-vulnerability-api-response.json  vulnerability-from-zip-download.json
src/cve_collector/: __init__.py  api.py  cli.py  cve.py  cve_collector.py
src/cve_collector/app/: api.py  cli.py  container.py
src/cve_collector/config/: __init__.py  constants.py  loader.py  settings.py  tokens.py  types.py  urls.py
src/cve_collector/core/: __init__.py  github_client.py  osv_client.py
src/cve_collector/infra/: cache_diskcache.py  github_enrichment.py  http_client.py  osv_adapter.py  osv_index.py  rate_limiter.py  schemas.py
src/cve_collector/shared/: filter_utils.py  logging.py  severity.py  utils.py
src/cve_collector/utils/: __init__.py  helpers.py  rate_limiter.py  unwrap_nullable.py
tests/cve_collector/: conftest.py
tests/cve_collector/app/: test_api.py  test_cli_clear_e2e.py  test_cli_detail_e2e.py  test_cli_dump_e2e.py  test_cli_help_e2e.py  test_cli_list_e2e.py
tests/cve_collector/config/: test_token_utils.py
tests/cve_collector/core/: test_clear_cache_usecase.py  test_composite_enricher.py  test_list_vulnerabilities_iter_usecase.py  test_models.py  (+1 more)
(+30 files in other folders)
