[project]
name = "cve-collector"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dependency-injector>=4.48.2",
    "diskcache>=5.6.3",
    "httpx>=0.28.1",
    "platformdirs>=4.3.8",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "typer>=0.16.1",
]

[project.scripts]
cve_collector = "cve_collector.app.cli:app"

[project.optional-dependencies]
tests = [
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
